--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "duq"
 version = "0.1.0"
-description = "Add your description here"
+description = "Minimal duckdb SQL orchestrator(DAG executor)"
 readme = "README.md"
 authors = [
     { name = "Okabintaro", email = "103938900+Okabintaro@users.noreply.github.com" }
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.8",
+    "duckdb>=1.2.1",
     "sqlglot>=26.9.0",
 ]
 
@@ -39,6 +40,7 @@ ignore = [
     # Allow TODOs for now
     "TD",
     "FIX",
+    "FBT"
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -57,4 +59,4 @@ unfixable = []
 convention = "numpy"
 
 [tool.basedpyright]
-allowedUntypedLibraries = ["sqlglot"]
+allowedUntypedLibraries = ["sqlglot", "duckdb"]
