--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   test:
